# cvEZ

./: Cargo.toml  README.md  cve.json  database.sqlite3  diesel.toml  sbom.xml
src/: main.rs  models.rs  sbom.rs
src/models/: cve.rs  post.rs  sbom.rs
